feat(api): feed and recommended projects endpoints
