# app/controllers/api/v1/me/recommended_projects_controller.rb
@@ -1,0 +1,11 @@
+class Api::V1::Me::RecommendedProjectsController < Api::BaseController
+  include ApiAuthenticatable
+
+  def index
+    @projects = Project.excluding_member(current_api_user)
+                       .where(deleted_at: nil)
+                       .with_banner_priority
+                       .limit(6)
+    render "api/v1/projects/collection"
+  end
+end
